<resources>
    <string name="app_name" translatable="false">Redeban SDK</string>

    <string name="card_number_hint" translatable="false">1234 1234 1234 1234</string>
    <string name="cvc_number_hint" translatable="false">CVC</string>
    <string name="cvc_amex_hint" translatable="false">CVV</string>
    <string name="cvc_multiline_helper" translatable="false">123</string>
    <string name="cvc_multiline_helper_amex" translatable="false">1234</string>
    <string name="valid_digits" translatable="false">0123456789</string>
    <string name="zip_helper" translatable="false">12345</string>
    <string name="name_helper" translatable="false">Jhon Doe</string>


    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_cardholdername">Card Holder\'s Name</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="expiry_label_short">Expiry</string>
    <string name="invalid_card_number">Your card\'s number is invalid.</string>
    <string name="invalid_expiry_year">Your card\'s expiration year is invalid.</string>
    <string name="invalid_cvc">Your card\'s security code is invalid.</string>
    <string name="invalid_zip">Your postal code is incomplete.</string>
    <string name="invalid_cardholdername">Your name\'s Name is invalid.</string>
    <string name="documento_de_identificacion">Identification document</string>
    <string name="clave_tuya">Tuya Password</string>
    <string name="error_fiscal_number">Invalid Identification document</string>
    <string name="error_nip">Invalid Password</string>

</resources>
